# Food_Info_Trace

./: .gitignore  README.md  docker-compose.yml
backend_rust/: Cargo.toml
backend_rust/src/: db.rs  errors.rs  main.rs  models.rs
backend_rust/src/handlers/: food_records.rs  health_check.rs  mod.rs
blockchain_hardhat/: hardhat.config.js  package-lock.json  package.json
blockchain_hardhat/contracts/: FoodTraceability.sol
blockchain_hardhat/scripts/: deploy.js
frontend_typescript/: package-lock.json  package.json  vite.config.ts
frontend_typescript/src/: App.tsx  main.tsx
frontend_typescript/src/pages/: AddFoodPage.tsx  FoodDetailPage.tsx  HomePage.tsx  SearchPage.tsx
frontend_typescript/src/utils/: blockchain.ts
