[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "mysql", "chrono", "json" ] } # 数据库交互 (MySQL, Tokio runtime, Chrono types, JSON type)
dotenvy = "0.15"                                      # 加载 .env 文件
chrono = { version = "0.4", features = ["serde"] }    # 日期和时间处理，启用 serde 支持
